Add test text to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Z-Team Line Following Robot</title>
+  </head>
+  <body>
+    <p>Welcome!</p>
+  </body>
+</html>
