Modify h1 styles in index.html
Updated border style and commented out padding and width properties.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ body {
    }
 h1 {
    color: white;
-   border: 3px dotted white;
-   padding: 6px;
+   border: 1px solid white;
+   /* padding: 6px; */
    scale: 1;
    margin: auto;
-   width: 100%;
+   /* width: 100%; */
    text-align: center;
    background-color: black;
 }
