--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 
 body {
-   background-image: url('/images/galaxy.webp');
+   background-image: url('images/galaxy.webp');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
@@ -17,7 +17,7 @@ h1 {
    border: 1px solid white;
    /* padding: 6px; */
    scale: 1;
-   margin: auto;
+   margin: f;
    /* width: 100%; */
    text-align: center;
    background-color: black;
@@ -48,14 +48,15 @@ color: green;
    <div class = "_description">
       <h2> Iteration 1: </h2>
       <!-- description of iteration 1-->
-       <p > This is a description of the robot . . .</p>
+       <img src="images\robot0.jpg" width="720" height="720"> 
+       <!-- <p > This is a description of the robot . . .</p>
        <br>
-       <p> add images here </p>
+       <p> add images here </p> -->
 
 
-      <h2> Iteration 2: </h2>
-      <!-- description of iteration 1-->
-       <p> This is a description of the robot . . .</p>
+      <!-- <h2> Iteration 2: </h2> -->
+      <!-- description of iteration 1 -->
+       <!-- <p> This is a description of the robot . . .</p> --> 
 
    </div>
 
