--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ color: green;
 
 <head>
   <title>Z-Team</title>
-  <link rel="icon" type="image/x-icon" href="/images/motherboard.ico">
+  <link rel="icon" type="image/x-icon" href="\images\motherboard.ico">
    
 </head>
 
@@ -48,7 +48,7 @@ color: green;
    <div class = "_description">
       <h2> Iteration 1: </h2>
       <!-- description of iteration 1-->
-       <img src="/images/robot0.jpg" width="720" height="720"> 
+       <img src="\images\robot0.jpg" width="720" height="720"> 
        <!-- <p > This is a description of the robot . . .</p>
        <br>
        <p> add images here </p> -->
