--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 
 body {
-   background-image: url('\images\galaxy.webp');
+   background-image: url('images\galaxy.webp');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
