--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ color: green;
 
    </div>
 
-
+   <video width="320" height="240" controls>
+     <source src="" type="video/mp4">
+   </video>
 
    <!-- use this section as reference so others can download code and images of robot -->
 
