--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ color: green;
    </div>
 
    <video width="320" height="240" controls>
-     <source src="IMG_6524.mov" type="video/mOV">
+     <source src="IMG_6524.mp4" type="video/mOV">
    </video>
 
    <!-- use this section as reference so others can download code and images of robot -->
