Add names to index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ color: green;
 
 <body>
    <h1> Z-Team Line Following Robot </h1>
+   <h2>Anthony Borja, Jack Cassatt, Tanner Haydock, and Matvey Masko</h2>
    <br>
    <div class = "_description">
       <h2> Iteration 1: </h2>
